--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,6 @@ Build-Depends:
  dh-python,
  dpkg-dev (>= 1.16.1~),
  gir1.2-json-1.0,
- gir1.2-meta-muffin-0.0 (>= 3.8),
  gnome-pkg-tools (>= 0.11),
  gobject-introspection (>= 1.29.15),
  gtk-doc-tools,
@@ -24,7 +23,7 @@ Build-Depends:
  libgtk-3-dev (>= 3.9.12),
  libgudev-1.0-dev,
  libjson-glib-dev (>= 0.13.2),
- libmuffin0 (>= 3.8),
+ libmuffin-dev (>= 5.2),
  libnm-dev (>= 1.6) [linux-any],
  libnma-dev [linux-any],
  libpolkit-agent-1-dev (>= 0.100),
@@ -63,7 +62,7 @@ Depends:
  gir1.2-gtkclutter-1.0,
  gir1.2-ical-3.0,
  gir1.2-keybinder-3.0,
- gir1.2-meta-muffin-0.0,
+ gir1.2-meta-muffin-0.0 (>= 5.2),
  gir1.2-nm-1.0 [linux-any] | gir1.2-networkmanager-1.0 [linux-any],
  gir1.2-nma-1.0 [linux-any],
  gir1.2-notify-0.7,
@@ -80,7 +79,7 @@ Depends:
  libcinnamon-menu-3-0,
  libcjs0f,
  libglib2.0-bin,
- libmuffin0,
+ libmuffin0 (>= 5.2),
  mate-panel | gnome-panel | tint2,
  mesa-utils,
  metacity,
@@ -123,7 +122,7 @@ Architecture: all
 Depends:
  gettext,
  gir1.2-cinnamondesktop-3.0 (>= 4.8),
- gir1.2-meta-muffin-0.0,
+ gir1.2-meta-muffin-0.0 (>= 5.2),
  gir1.2-timezonemap-1.0,
  xdg-utils,
  python3-xapp,
@@ -147,7 +146,7 @@ Depends:
  libcinnamon-menu-3-0-dbg (>= 4.8),
  libcjs-dbg (>= 4.8),
  libcvc-dbg,
-# muffin-dbg,
+ muffin-dbg (>= 5.2),
  nemo-dbg,
  ${misc:Depends},
 Description: Debugging symbols for the Cinnamon desktop
