--- a/src/meson.build
+++ b/src/meson.build
@@ -21,7 +21,7 @@ cinnamon_headers = [
     'cinnamon-global.h',
     'cinnamon-perf-log.h',
     'cinnamon-screen.h',
-    # 'cinnamon-screenshot.h',
+    'cinnamon-screenshot.h',
     'cinnamon-slicer.h',
     'cinnamon-stack.h',
     'cinnamon-tray-icon.h',
@@ -52,7 +52,7 @@ cinnamon_sources = [
     'cinnamon-global.c',
     'cinnamon-perf-log.c',
     'cinnamon-screen.c',
-    # 'cinnamon-screenshot.c',
+    'cinnamon-screenshot.c',
     'cinnamon-slicer.c',
     'cinnamon-stack.c',
     'cinnamon-tray-icon.c',
