--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Linux Mint <root@linuxmint.com>
 Build-Depends:
  meson,
  debhelper-compat (= 12),
-# dh-python,
+ dh-python,
  dpkg-dev (>= 1.16.1~),
  gir1.2-json-1.0,
  gnome-pkg-tools (>= 0.11),
