d/control: increase cinnamon-destop deps to 5.3
commit 017811e0fcba68fdc48bdf133ea7435b9bb52466 use something added in
cinnamon-desktop 5.3

Fix access-after-dispose warnings.

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Build-Depends:
  gobject-introspection (>= 1.29.15),
  gtk-doc-tools,
  intltool,
- libcinnamon-desktop-dev (>= 4.8),
+ libcinnamon-desktop-dev (>= 5.3),
  libcinnamon-menu-3-dev (>= 4.8),
  libcjs-dev (>= 4.8),
  libdbus-1-dev,
@@ -44,7 +44,7 @@ Depends:
  adwaita-icon-theme,
  cinnamon-common,
  cinnamon-control-center,
- cinnamon-desktop-data,
+ cinnamon-desktop-data (>= 5.3),
  cinnamon-l10n,
  cinnamon-screensaver,
  cinnamon-session,
@@ -53,7 +53,7 @@ Depends:
  cups-pk-helper,
  gir1.2-accountsservice-1.0,
  gir1.2-caribou-1.0,
- gir1.2-cinnamondesktop-3.0 (>= 4.8),
+ gir1.2-cinnamondesktop-3.0 (>= 5.3),
  gir1.2-cmenu-3.0 (>= 4.8),
  gir1.2-cvc-1.0,
  gir1.2-ecal-2.0,
@@ -76,7 +76,7 @@ Depends:
  gsettings-desktop-schemas (>= 0.1.7),
  iso-flag-png,
  libcanberra-pulse,
- libcinnamon-desktop4,
+ libcinnamon-desktop4 (>= 5.3),
  libcinnamon-menu-3-0,
  libcjs0f,
  libglib2.0-bin,
@@ -122,7 +122,7 @@ Package: cinnamon-common
 Architecture: all
 Depends:
  gettext,
- gir1.2-cinnamondesktop-3.0 (>= 4.8),
+ gir1.2-cinnamondesktop-3.0 (>= 5.3),
  gir1.2-meta-muffin-0.0 (>= 5.3),
  gir1.2-timezonemap-1.0,
  python3-xapp,
@@ -143,7 +143,7 @@ Architecture: any
 Depends:
  cinnamon (= ${binary:Version}),
  cinnamon-control-center-dbg,
- libcinnamon-desktop-dbg (>= 4.8),
+ libcinnamon-desktop-dbg (>= 5.3),
  libcinnamon-menu-3-0-dbg (>= 4.8),
  libcjs-dbg (>= 4.8),
  libcvc-dbg,
